<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/historyRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:textAppearance="@style/TextAppearance.Flames.Title" />

    <TextView
        android:id="@+id/btnClearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvHistoryTitle"
        android:background="@drawable/bg_button_secondary"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_clear_history"
        android:textColor="@color/ocean_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/history_empty"
        android:textColor="@color/ocean_text_muted"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvHistoryTitle"
        android:layout_marginTop="16dp"
        android:divider="@color/ocean_divider"
        android:dividerHeight="1dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp" />

</RelativeLayout>
